--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,17 @@ h1 {
     margin-left: 40%;
 }
 
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.odp {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+}
 
 
